test_datas/compile_fail/missing_import.pgl
package main;

import "stdlib/core/not_found" as missing;

func main() {
    println(1);
}
